--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
     "manifest_version": 3,
     "name": "Email This Page",
-    "version": "2.0",
+    "version": "2.1",
     "description": "A utility extension to email web pages",
+    "minimum_chrome_version": "88",
     "permissions": [
         "contextMenus", "activeTab"
       ],
